--- a/scripts/tcga_run_models.cfg
+++ b/scripts/tcga_run_models.cfg
@@ -1,6 +1,8 @@
 #DATASET_DIR=/data/Naresh_Learning/data/BRCA_TCGA/tfrecords/selected_samples_tumonly/
-DATASET_DIR=/data/Naresh_Learning/data/BRCA_TCGA/tfrecords/Level2_selected
+#DATASET_DIR=/data/Naresh_Learning/data/BRCA_TCGA/tfrecords/Level2_selected
+DATASET_DIR=/data/Naresh_Learning/data/BRCA_TCGA/tfrecords/Level2_selected_Anygene
 IMAGE_SIZE=224
 DATASET_NAME=tcga
 LOGDIR=/data/Naresh_Learning/results/tcga_anygene_level2
+#LOGDIR=/data/Naresh_Learning/results/tcga_brca1_level2
 SLIM_SCRIPTS=/data/Naresh_Learning/scripts/models/research/slim
